Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetBoolObj.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
