Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntegerRetBoolObjFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
